# esp32-rotary-encoder

./: CMakeLists.txt  Kconfig  Kconfig.projbuild  README.md
